--- a/Practica1YA/ConsoleAppEF/App.config
+++ b/Practica1YA/ConsoleAppEF/App.config
@@ -20,4 +20,7 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+	<connectionStrings>
+		<add name="connBD" connectionString="Data Source=DESKTOP-R67IP5D\SQL2019; database=BD_Practica1; Trusted_Connection=true; Integrated Security=true" providerName="System.Data.SqlClient"/>
+	</connectionStrings>
 </configuration>
